--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "del": "^2.2.0",
     "es6-promise": "^3.0.2",
     "esdoc": "^0.4.4",
-    "eslint": "^2.0.0",
+    "eslint": "~2.2.0",
     "eslint-plugin-markdown": "^1.0.0-beta.1",
     "glob": "^7.0.0",
     "gulp": "^3.9.1",
