--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "mocha-each",
   "version": "1.0.3",
   "description": "Parameterized test utility for Mocha",
-  "main": "build/index.js",
-  "types": "build/index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "build": "gulp build",
     "test": "gulp check",
